--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -60,7 +60,7 @@
                 <p>
                   {{ post.text|linebreaks|truncatewords:10 }}
                 </p>
-                <a href="/">Читать полный текст</a>
+                <a href="{% url 'blog:detail' post.id %}">Читать полный текст</a>
               </article>
           {% endfor %}
       </div>
