--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -54,7 +54,7 @@
                     Дата: {{ post.date }}
                   </li>
                   <li>
-                    Категория: <a href="/">{{ post.category }}</a>
+                      Категория: <a href="{% url 'blog:category' post.category %}">{{ post.category }}</a>
                   </li>
                 </ul>
                 <p>
