--- a/blogicum/templates/includes/footer.html
+++ b/blogicum/templates/includes/footer.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-
+    <footer class="border-top text-center py-3">
+      <p>© Блогикум</p>
+    </footer>
 </body>
 </html>
