--- a/blogicum/templates/blog/category.html
+++ b/blogicum/templates/blog/category.html
@@ -5,7 +5,7 @@
     <main>
       {% block content %}
       <div class="container py-5">
-        <h1>Публикации в категории personal</h1>
+        <h1>Публикации в категории - {{ category }}</h1>
       </div>
       {% endblock %}
     </main>
