--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -1,33 +1,7 @@
 {% extends "base.html" %}
-<!DOCTYPE html>
 {% load static %}
-<html lang="ru"> 
-    <main>
-     {% block content %}
-      <div class="container py-5">
-        <h1>Лента записей</h1>
-        <!-- Перебираем в цикле все посты -->
-          {% for post in posts|dictsortreversed:'id' %}
-            <hr>
-              <article>
-                <ul>
-                  <li>
-                    Место: {{ post.location }}
-                  </li>
-                  <li>
-                    Дата: {{ post.date }}
-                  </li>
-                  <li>
-                      Категория: <a href="{% url 'blog:category' post.category %}">{{ post.category }}</a>
-                  </li>
-                </ul>
-                <p>
-                  {{ post.text|linebreaks|truncatewords:10 }}
-                </p>
-                <a href="{% url 'blog:detail' post.id %}">Читать полный текст</a>
-              </article>
-          {% endfor %}
-      {% endblock %}
-      </div>
-    </main>
-</html>
+{% block title %} Лента записей {% endblock %}
+{% block content %}
+  <h1>Лента записей</h1>
+  {% include "includes/main_post.html" %}
+{% endblock %}
