--- a/blogicum/templates/pages/about.html
+++ b/blogicum/templates/pages/about.html
@@ -1,12 +1,8 @@
 {% extends "base.html" %}
-<!DOCTYPE html>
 {% load static %}
-<html lang="ru">
-  <body>
-    <main>
-      {% block content %}
-      <div class="container py-5">
-        <h1>О проекте</h1>
+{% block title %} О проекте {% endblock %}
+{% block content %}
+  <h1>О проекте</h1>
         <p>
           <b>Блогикум</b> — это дом для творческих людей. Это — сообщество людей, для которых
           нет грани между ведением блога и дружбой в социальных сетях.
@@ -21,8 +17,4 @@
           Творчество, разнообразие и свобода взглядов и самовыражения —
           основные черты наших пользователей.
         </p>
-      </div>
-      {% endblock %}
-    </main>
-   </body>
-</html>
+{% endblock %}
