--- a/blogicum/templates/pages/rules.html
+++ b/blogicum/templates/pages/rules.html
@@ -1,11 +1,7 @@
 {% extends "base.html" %}
-<!DOCTYPE html>
 {% load static %}
-<html lang="ru"> 
-    <body>
-     <main>
-      {% block content %}
-      <div class="container py-5">                        
+{% block title %} О проекте {% endblock %}
+{% block content %}
         <h1>Наши правила</h1>
         <p>
           <b>Cамовыражение.</b> У наших пользователей должна 
@@ -29,8 +25,4 @@
           Как и насколько засекречивать вашу личную информацию — 
           определяете вы и только вы.  
         </p>
-      </div>
-     {% endblock %}
-    </main>
-  </body>
-</html>
+{% endblock %}
