--- a/blogicum/templates/includes/main_post.html
+++ b/blogicum/templates/includes/main_post.html
@@ -1,10 +1,9 @@
-{% load static %}
 {% for post in posts|dictsortreversed:'id' %}
   <hr>
   <article>
     <ul>
       <li>
-        Место: {{ post.location }}              
+        Место: {{ post.location }}
       </li>
       <li>
         Дата: {{ post.date }} 
@@ -14,7 +13,7 @@
       </li>
     </ul>     
     <p>
-      {{ post.text|truncatewords:10 }}
+      {{ post.text|linebreaks|truncatewords:10 }}
     </p>
     <a href="{% url 'blog:post_detail' post.id %}">Читать полный текст</a>
   </article>
