--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -6,17 +6,17 @@
         <article>
           <ul>
             <li>
-              Место: {{ post_detail.location }}
+              Место: {{ post.location }}
             </li>
             <li>
-              Дата: {{ post_detail.date }}
+              Дата: {{ post.date }}
             </li>
             <li>
-              Категория: {{ post_detail.category }}
+              Категория: {{ post.category }}
             </li>
           </ul>
           <p>
-              {{ post_detail.text|linebreaksbr }}
+              {{ post.text|linebreaksbr }}
           </p>
         </article>
       </div>
